# snowflake-notebook-multilang

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
configs/: default.yaml  julia_only.yaml  r_only.yaml  r_scala.yaml  rsnowflake.yaml  scala_only.yaml  snowflaker.yaml  snowflaker_credit_risk.yaml  snowflaker_forecast.yaml
docs/: adding_a_language.md  artifact_repository_support_summary.md  cli.md  configuration.md  custom_mirrors.md  network_rules.md  quickstart.md
examples/julia_smoke_test/: README.md  julia_smoke_test_config.yaml  workspace_julia_smoke_test.ipynb  workspace_julia_smoke_test_EAI.sql
examples/query_tracker_test/: query_tracker.py  query_tracker_test_config.yaml  workspace_query_tracker_test.ipynb
examples/r_smoke_test/: README.md  eai_helper.py  notebook_config.yaml.template  r_smoke_test_config.yaml  workspace_r_smoke_test.ipynb  workspace_r_smoke_test_EAI.sql
examples/scala_smoke_test/: README.md  scala_smoke_test_config.yaml  workspace_scala_smoke_test.ipynb  workspace_scala_smoke_test_EAI.sql
notebooks/: test_01_r_only.ipynb  test_02_scala_only.ipynb  test_03_julia_only.ipynb  test_04_r_scala.ipynb  test_05_all_languages.ipynb  test_06_eai.ipynb  test_07_edge_cases.ipynb
src/sfnb_multilang/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  installer.py  logging_config.py  network_rules.py
src/sfnb_multilang/helpers/: julia_helpers.py  query_tracker.py  r_helpers.py  scala_helpers.py  sfnb_setup.py
src/sfnb_multilang/languages/: __init__.py  base.py  julia.py  r.py  scala.py
src/sfnb_multilang/shared/: conda_env.py  download.py  micromamba.py  preflight.py  subprocess_utils.py
tests/unit/: test_config.py  test_installer.py  test_mirror_secrets.py  test_network_rules.py
